# peredatchik

./: BasePanel.cpp  BasePanel.h  CMakeLists.txt  EditableText.cpp  EditableText.h  LineEdit.cpp  LineEdit.h  Lines.cpp  Lines.h  MessagePopup.cpp  MessagePopup.h  PeredachaPanel.cpp  PeredachaPanel.h  Popup.cpp  Popup.h  PriemPanel.cpp  PriemPanel.h  Screen.cpp  Screen.h  colors.h  main-peredacha.cpp  main-priem.cpp  priemoperedacha.cpp  priemoperedacha.h  utils.cpp  utils.h
